:recycle: REFACTOR: 요청관리 옵션 코드 리펙토링